<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_fragment_genres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:paddingBottom="24dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="24dp"
    android:gravity="center"
    android:background="@drawable/rounded">

    <include android:id="@+id/error_message" layout="@layout/error_layout_genres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_close_dialog"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_genres"

        android:listSelector="@android:color/transparent"

        android:layout_height="0dp"
        android:layout_width="0dp"

        android:layout_marginBottom="@dimen/margin_outer_big"
        android:layout_marginTop="@dimen/margin_outer_small"
        android:layout_marginStart="@dimen/margin_outer_small"
        android:layout_marginEnd="@dimen/margin_outer_small"

        app:layout_constraintBottom_toTopOf="@+id/btn_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton

        android:id="@+id/btn_close_dialog"

        android:layout_width="32dp"
        android:layout_height="32dp"

        android:background="@android:color/transparent"

        android:src="@drawable/ic_close"
        android:scaleType="fitXY"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:contentDescription="@string/descr_close_genres_dialog"/>

</androidx.constraintlayout.widget.ConstraintLayout>