<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.example.qfilm.utils.TextColorBindingAdapter" />

    <variable
        name="obj"
        type="com.example.qfilm.data.models.entities.Genre"
        />


    </data>

    <TextView
        android:id="@+id/tv_genre_name"
        android:text="@{obj.getName()}"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textAppearance="@style/TextAppearance.Qfilm.GenreListItem"
        app:textColor="@{obj.isSelected()}"

    />

</layout>
